--- a/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Delete.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Delete.cshtml
@@ -23,7 +23,7 @@
         </dl>
 
         <form asp-action="Delete">
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaNhanVien" />
             <button class="btn btn-danger">Xóa</button>
             <a asp-action="Index" class="btn btn-secondary ms-2">Hủy</a>
         </form>
