--- a/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Index.cshtml
@@ -29,9 +29,9 @@
             <td>@nv.ChucVu</td>
             <td>@nv.Email</td>
             <td class="text-end">
-                <a asp-action="Details" asp-route-id="@nv.Id" class="btn btn-sm btn-outline-primary">Chi tiết</a>
-                <a asp-action="Edit" asp-route-id="@nv.Id" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
-                <a asp-action="Delete" asp-route-id="@nv.Id" class="btn btn-sm btn-outline-danger ms-1">Xóa</a>
+                <a asp-action="Details" asp-route-id="@nv.MaNhanVien" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                <a asp-action="Edit" asp-route-id="@nv.MaNhanVien" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
+                <a asp-action="Delete" asp-route-id="@nv.MaNhanVien" class="btn btn-sm btn-outline-danger ms-1">Xóa</a>
             </td>
         </tr>
     }
