--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Delete.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Delete.cshtml
@@ -24,7 +24,7 @@
         </dl>
 
         <form asp-action="Delete" method="post">
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaPhieuMuon" />
             <button type="submit" class="btn btn-danger">Xóa</button>
             <a asp-action="Index" class="btn btn-secondary ms-2">Hủy</a>
         </form>
