--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Delete.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Delete.cshtml
@@ -27,7 +27,7 @@
         </dl>
 
         <form asp-action="Delete" method="post" class="d-inline">
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaPhat" />
             <button type="submit" class="btn btn-danger">Xóa</button>
         </form>
         <a asp-action="Index" class="btn btn-secondary ms-2">Hủy</a>
