--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
@@ -36,9 +36,9 @@
                 <td>@item.TacGia?.TenTacGia</td>
                 <td>@item.SoLuong</td>
                 <td class="text-end">
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary">Chi tiết</a>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Sửa</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger">Xóa</a>
+                    <a asp-action="Details" asp-route-id="@item.MaSach" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                    <a asp-action="Edit" asp-route-id="@item.MaSach" class="btn btn-sm btn-outline-secondary">Sửa</a>
+                    <a asp-action="Delete" asp-route-id="@item.MaSach" class="btn btn-sm btn-outline-danger">Xóa</a>
                 </td>
             </tr>
         }
