--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/_Form.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/_Form.cshtml
@@ -3,11 +3,6 @@
 <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div>
 
 <div class="row g-3">
-    <div class="col-md-6">
-        <label asp-for="MaSach" class="form-label"></label>
-        <input asp-for="MaSach" class="form-control" readonly />
-        <span asp-validation-for="MaSach" class="text-danger"></span>
-    </div>
 
     <div class="col-md-6">
         <label asp-for="TenSach" class="form-label"></label>
@@ -46,13 +41,13 @@
     </div>
 
     <div class="col-md-6">
-        <label asp-for="TacGiaId" class="form-label"></label>
-        <select asp-for="TacGiaId" asp-items="ViewBag.TacGiaId" class="form-select">
+        <label asp-for="MaTacGia" class="form-label"></label>
+        <select asp-for="MaTacGia" asp-items="ViewBag.MaTacGia" class="form-select">
             <option value="">-- Chọn tác giả --</option>
         </select>
      
 
-        <span asp-validation-for="TacGiaId" class="text-danger"></span>
+        <span asp-validation-for="MaTacGia" class="text-danger"></span>
     </div>
 
     <div class="col-12">
