--- a/DoAn_Nhom3/LibraryManagement/Views/ThongKeMuons/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/ThongKeMuons/Index.cshtml
@@ -72,7 +72,7 @@ else
                 {
                     <tr>
                         <td><strong>@item.MaPhieuMuon</strong></td>
-                        <td>@item.NguoiMuonId</td>
+                        <td>@item.MaNguoiMuon</td>
                         <td>@item.NguoiMuon?.HoTen</td>
                         <td>@item.NgayMuon.ToString("dd/MM/yyyy")</td>
                         <td>@item.HanTra.ToString("dd/MM/yyyy")</td>
