--- a/DoAn_Nhom3/LibraryManagement/Views/DanhMucs/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/DanhMucs/Edit.cshtml
@@ -13,7 +13,7 @@
 <div class="card">
     <div class="card-body">
         <form asp-action="Edit" class="needs-validation" novalidate>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaDanhMuc" />
             @await Html.PartialAsync("_Form", Model)
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary">Lưu</button>
