--- a/DoAn_Nhom3/LibraryManagement/Views/NguoiMuons/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/NguoiMuons/Index.cshtml
@@ -34,9 +34,9 @@
                 <td>@item.NgayDangKy.ToString("dd/MM/yyyy")</td>
                 <td>@item.NgayHetHan.ToString("dd/MM/yyyy")</td>
                 <td class="text-end">
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary">Chi tiết</a>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger ms-1">Xóa</a>
+                    <a asp-action="Details" asp-route-id="@item.MaNguoiMuon" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                    <a asp-action="Edit" asp-route-id="@item.MaNguoiMuon" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
+                    <a asp-action="Delete" asp-route-id="@item.MaNguoiMuon" class="btn btn-sm btn-outline-danger ms-1">Xóa</a>
                 </td>
             </tr>
         }
