--- a/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Details.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Details.cshtml
@@ -8,7 +8,7 @@
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1>Thông tin nhân viên</h1>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-sm btn-outline-secondary">Sửa</a>
+        <a asp-action="Edit" asp-route-id="@Model?.MaNhanVien" class="btn btn-sm btn-outline-secondary">Sửa</a>
         <a asp-action="Index" class="btn btn-sm btn-secondary ms-2">Quay lại</a>
     </div>
 </div>
@@ -28,7 +28,7 @@
             <dd class="col-sm-9">@Model.TaiKhoan</dd>
         </dl>
 
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Sửa</a>
+        <a asp-action="Edit" asp-route-id="@Model.MaNhanVien" class="btn btn-primary">Sửa</a>
         <a asp-action="Index" class="btn btn-secondary ms-2">Quay lại</a>
     </div>
 </div>
