--- a/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Edit.cshtml
@@ -13,7 +13,7 @@
 <div class="card">
     <div class="card-body">
         <form asp-action="Edit">
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaNhanVien" />
             @await Html.PartialAsync("_Form", Model)
             <div class="mt-3">
                 <button class="btn btn-primary">Lưu</button>
