--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Delete.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Delete.cshtml
@@ -23,7 +23,7 @@
         </dl>
 
         <form asp-action="Delete" method="post">
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaSach" />
             <button type="submit" class="btn btn-danger">Xóa</button>
             <a asp-action="Index" class="btn btn-outline-secondary ms-2">Hủy</a>
         </form>
