--- a/DoAn_Nhom3/LibraryManagement/Views/TacGias/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/TacGias/Edit.cshtml
@@ -13,7 +13,7 @@
 <div class="card shadow-sm">
     <div class="card-body">
         <form asp-action="Edit" class="needs-validation" novalidate>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaTacGia" />
 
             @await Html.PartialAsync("_Form", Model)
 
