update: the relationship between sach and danhmuc

--- a/DoAn_Nhom3/LibraryManagement/Views/DanhMucs/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/DanhMucs/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LibraryManagement.Models.DanhMuc
+﻿@model LibraryManagement.ViewModels.DanhMucEditViewModel
 
 @{
     ViewData["Title"] = "Create";
