--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using LibraryManagement.Extensions
-@model LibraryManagement.Models.CreateBorrowRecordDto
+@model LibraryManagement.DtosModels.CreateBorrowRecordDto
 @{
     ViewData["Title"] = "Tạo phiếu mượn";
     Layout = "~/Views/Shared/_Layout.cshtml";
