--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LibraryManagement.Models.Sach
+﻿@model LibraryManagement.ViewModels.SachEditViewModel
 
 @{
     ViewData["Title"] = "Create";
