--- a/DoAn_Nhom3/LibraryManagement/Views/ThongKeSachs/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/ThongKeSachs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LibraryManagement.Models.SachThongKeDto>
+﻿@model IEnumerable<LibraryManagement.DtosModels.SachThongKeDto>
 @{
     ViewData["Title"] = "Thống kê sách";
 }
