--- a/DoAn_Nhom3/LibraryManagement/Views/DanhMucs/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/DanhMucs/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model LibraryManagement.Models.DanhMuc
+﻿@model LibraryManagement.ViewModels.DanhMucEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,7 +13,7 @@
 <div class="card">
     <div class="card-body">
         <form asp-action="Edit" class="needs-validation" novalidate>
-            <input type="hidden" asp-for="MaDanhMuc" />
+            <input type="hidden" asp-for="DanhMuc.MaDanhMuc" />
             @await Html.PartialAsync("_Form", Model)
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary">Lưu</button>
