update: something for clean code

--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Layout.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/LibraryManagement.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/dashboard.css" asp-append-version="true" />
 
-    @RenderSection("Styles", required: false)
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
     @await Html.PartialAsync("_ColorSection")
