--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Create.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@await Html.PartialAsync("_Alerts")
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h1>Tạo sách mới</h1>
