--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@await Html.PartialAsync("_Alerts")
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Danh sách sách</h2>
