--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Edit.cshtml
@@ -161,7 +161,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
                     <button type="submit" class="btn btn-success">
-                        <i class="bi bi-check-circle"></i> Xác nhận trả
+                        Xác nhận trả
                     </button>
                 </div>
             </form>
